--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -12,6 +12,10 @@
 
 %%%%% Report References %%%%%
 
+@ARTICLE{portal2,
+	url = "http://www.thinkwithportals.com/"
+	}
+
 @ARTICLE{modin,
    author = "Martin Kaltenbrunner",
    title = "Tangible Musical Interfaces",
